--- a/source/Amiquin.Core/Amiquin.Core.csproj
+++ b/source/Amiquin.Core/Amiquin.Core.csproj
@@ -26,7 +26,9 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="Serilog.Sinks.Http" Version="9.1.1" />
-    <PackageReference Include="System.Drawing.Common" Version="9.0.8" />
+    <PackageReference Include="SixLabors.Fonts" Version="2.1.3" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="TiktokenSharp" Version="1.1.7" />
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="9.0.8" />
