feat: Add NSFW/Waifu API integration with configuration options and commands

--- a/source/Amiquin.Bot/appsettings.example.json
+++ b/source/Amiquin.Bot/appsettings.example.json
@@ -52,6 +52,12 @@
     "TTSModelName": "en_GB-northern_english_male-medium",
     "Enabled": true
   },
+  "WaifuApi": {
+    "Token": "your-waifu-api-token-here",
+    "BaseUrl": "https://api.waifu.im",
+    "Version": "v5",
+    "Enabled": true
+  },
   "LLM": {
     "GlobalTimeout": 120,
     "GlobalTemperature": 0.6,
