--- a/source/Amiquin.Bot/Amiquin.Bot.csproj
+++ b/source/Amiquin.Bot/Amiquin.Bot.csproj
@@ -8,7 +8,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="3.18.0" />
+    <PackageReference Include="Discord.Net" Version="3.18.0-nightly.20250728.601"/>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Jiro.Shared" Version="1.4.4">
       <ExcludeAssets>contentFiles</ExcludeAssets>
