feat(scrapper): Implement Luscious.net scrapper configuration and integration
- Added scrapper configuration options for Luscious.net in appsettings.
- Introduced IScrapper interface and ConfigurationBasedScrapper class for scraping functionality.
- Integrated scrapper into NsfwApiService and NsfwComponentHandlers for fetching images.
- Updated InjectionConfigurator to register scrapper services and configure HTTP clients.
- Created models and options for scrapper steps and results processing.
- Removed deprecated appsettings.example.json file.
- Added unit tests for NsfwApiService to include scrapper interactions.

--- a/source/Amiquin.Bot/Configuration/appsettings.example.json
+++ b/source/Amiquin.Bot/Configuration/appsettings.example.json
@@ -200,5 +200,44 @@
     "Properties": {
       "Application": "Amiquin"
     }
+  },
+  "Scrappers": {
+    "Luscious": {
+      "SourceName": "Luscious.net",
+      "BaseUrl": "https://www.luscious.net",
+      "TimeoutSeconds": 30,
+      "UserAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/131.0.0.0 Safari/537.36",
+      "Enabled": true,
+      "ExtractionSteps": [
+        {
+          "Name": "Get Album List",
+          "Url": "https://www.luscious.net/hentai/?page={random(1...100)}",
+          "ExtractionRegex": "href=\"(/albums/[^\"]+)\"",
+          "CaptureGroup": 1,
+          "ExtractMultiple": true,
+          "RepetitionCount": 3,
+          "RandomizeResults": true
+        },
+        {
+          "Name": "Get Slideshow URLs",
+          "Url": "https://www.luscious.net{randomResult}",
+          "ExtractionRegex": "href\\s*=\\s*[\"\"'](\\/?(?:albums\\/[^\"\"']+|pictures\\/album\\/[^\"\"']+))[\"\"']",
+          "CaptureGroup": 1,
+          "ExtractMultiple": true,
+          "RepetitionCount": 1,
+          "RandomizeResults": true
+        },
+        {
+          "Name": "Extract Full-Size Images",
+          "Url": "https://www.luscious.net{randomResult}",
+          "ExtractionRegex": "<source srcset=\"(https://ah-img\\.luscious\\.net/[^\"]+\\.(\\d+)x0\\.[^\"]+)\"",
+          "CaptureGroup": 1,
+          "ExtractMultiple": true,
+          "RepetitionCount": 10,
+          "RandomizeResults": false,
+          "SelectHighestResolution": true
+        }
+      ]
+    }
   }
 }
