feat(scrappers): Introduce ScrapperManagerService and refactor scrapper architecture
- Added ScrapperManagerService to manage multiple scrapper providers.
- Introduced IDataScrapper and IImageScraper interfaces for better abstraction.
- Refactored ConfigurationBasedScrapper to implement new interfaces and support caching.
- Updated NsfwApiService to use IDataScrapper instead of IScrapper for improved flexibility.
- Enhanced error handling and logging throughout the scrapper services.
- Added new configuration options for scrappers in appsettings.
- Updated DiscordUtilities to create standardized error messages.
- Refactored tests to accommodate changes in scrapper interfaces.

--- a/source/Amiquin.Bot/Configuration/appsettings.example.json
+++ b/source/Amiquin.Bot/Configuration/appsettings.example.json
@@ -172,6 +172,52 @@
     "MinimumJobIntervalSeconds": 5,
     "MaximumJobIntervalSeconds": 86400
   },
+  "Scrappers": {
+    "CacheSize": 200,
+    "CacheExpirationMinutes": 60,
+    "Providers": [
+      {
+        "SourceName": "Luscious.net",
+        "BaseUrl": "https://www.luscious.net",
+        "AppendBaseUrl": false,
+        "Enabled": false,
+        "TimeoutSeconds": 30,
+        "UserAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36",
+        "ExtractionSteps": [
+          {
+            "Name": "Get Random Albums",
+            "Url": "https://www.luscious.net/albums/list/",
+            "ExtractionRegex": "/albums/([^/]+)/",
+            "CaptureGroup": 1,
+            "ExtractMultiple": true,
+            "RepetitionCount": 5,
+            "RandomizeResults": true,
+            "SelectHighestResolution": false
+          },
+          {
+            "Name": "Get Album Images",
+            "Url": "https://www.luscious.net/albums/{randomResult}/",
+            "ExtractionRegex": "/pictures/([^/]+)/",
+            "CaptureGroup": 1,
+            "ExtractMultiple": true,
+            "RepetitionCount": 1,
+            "RandomizeResults": true,
+            "SelectHighestResolution": false
+          },
+          {
+            "Name": "Get Image URLs",
+            "Url": "https://www.luscious.net/pictures/{randomResult}/",
+            "ExtractionRegex": "\"(https://[^\"]+\\.(?:1680|1024)x0\\.[^\"]+)\"",
+            "CaptureGroup": 1,
+            "ExtractMultiple": false,
+            "RepetitionCount": 1,
+            "RandomizeResults": false,
+            "SelectHighestResolution": true
+          }
+        ]
+      }
+    ]
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -205,6 +251,7 @@
     "Luscious": {
       "SourceName": "Luscious.net",
       "BaseUrl": "https://www.luscious.net",
+      "AppendBaseUrl": true,
       "TimeoutSeconds": 30,
       "UserAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/131.0.0.0 Safari/537.36",
       "Enabled": true,
